syntax = "proto3";

package com.ysz.arm.blog.client;
option java_package = "com.ysz.arm.blog.client";
option java_multiple_files = true;

service BlogService {
  rpc createBlogPost (CreateBlogPostRequest) returns (BlogPost) {}
}

message CreateBlogPostRequest {
  string title = 1;
  string content = 2;
}


message BlogPost {
  int32 id = 1;
  string title = 2;
  string content = 3;
  int64 createdAt = 4;
  int64 modifiedAt = 5;
}